<resources>
    <string name="app_name">Sudouku home edition</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="erase">Erase</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="new_sudoku">New Sudoku</string>
    <string name="exit">Exit</string>
    <string name="congratulations_sudoku_solved">🎉 Congratulations! Sudoku solved!</string>
    <string name="easy_jigsaw">Easy Jigsaw</string>
    <string name="medium_jigsaw">Medium Jigsaw</string>
    <string name="hard_jigsaw">Hard Jigsaw</string>
</resources>